syntax = "proto3";

package bookservice;

option java_multiple_files = true;
option java_package = "bookservice";

import "book_message.proto";
import "add_book_message.proto";
import "update_book_message.proto";
import "delete_book_message.proto";
import "get_books_message.proto";


service BookService {
	rpc AddBook (AddBookRequest) returns (AddBookResponse) {}
	rpc UpdateBook (UpdateBookRequest) returns (UpdateBookResponse) {}
	rpc DeleteBook (DeleteBookRequest) returns (DeleteBookResponse) {}
	rpc GetBooks (GetBooksRequest) returns (GetBooksResponse) {}
}
